2005-11-15 [wwp]	1.9.100cvs15

	* src/gtk/quicksearch.c
		added a tooltip to that obscure ... quicksearch button

2005-11-15 [wwp]	1.9.100cvs14

	* src/gtk/quicksearch.c
		add a quicksearch helper to filtering expression users: the ... button
		raises the condition expr window. condition expressions set up w/ this
		window are used by the quicksearch if the user closes it pressing OK.

2005-11-14 [paul]	1.9.100cvs13

	* src/plugins/clamav/clamav_plugin.c
	* src/plugins/spamassassin/spamassassin.c
		change plugin type following recent merging

2005-11-14 [wwp]	1.9.100cvs12

	* src/folder.c
		prevent from crashing when copying/moving message(s) from and
		to the same folder

2005-11-14 [paul]	1.9.100cvs11

	* src/plugins/clamav/Makefile.am
	* src/plugins/clamav/clamav_plugin.c
	* src/plugins/clamav/clamav_plugin.h
	* src/plugins/clamav/clamav_plugin_gtk.c
		also merge clamav and clamav_gtk plugins

2005-11-13 [colin]	1.9.100cvs10

	* configure.ac
	* src/plugins/spamassassin/Makefile.am
	* src/plugins/spamassassin/spamassassin.c
	* src/plugins/spamassassin/spamassassin.h
	* src/plugins/spamassassin/spamassassin_gtk.c
		Merge spamassassin and spamassassin_gtk plugins,
		and build it by default.

2005-11-12 [colin]	1.9.100cvs9

	* src/etpan/imap-thread.c
		Fix gcc warning

2005-11-12 [colin]	1.9.100cvs8

	* src/procmime.c
		Revert 1.9.100cvs3 - it breaks PGP sign+encrypt

2005-11-10 [colin]	1.9.100cvs7

	* src/main.c
		Fix bug #845 (sylpheed-claws 1.9.99+ start in 
		minimised state)

2005-11-10 [wwp]	1.9.100cvs6

	* src/gtk/description_window.c
		fix a crash when closing description windows using the WM's [X] button

2005-11-09 [colin]	1.9.100cvs5

	* src/common/ssl.c
		Update libetpan call to follow upstream
		(yes, this requires libetpan-0.40cvs3)

2005-11-08 [colin]	1.9.100cvs4

	* src/compose.c
	* src/textview.c
	* src/common/utils.c
	* src/common/utils.h
		Enhance the email parser

2005-11-08 [colin]	1.9.100cvs3

	* src/procmime.c